GNOME Bugzilla – Bug 660876
nautilus crashed with SIGABRT in reorder_bookmarks()
Last modified: 2011-10-19 21:05:02 UTC
this report has been filed here: https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/865098 "The screen was blacked out by the screensaver. When i moved the mouse to my surprise i saw the mousepointer was holding the "documents" icon from nautilus. To make sure i did not mess things up i dragged it back to its place on nautilus and leftclicked. The system hung for a while and then this error appeared" ".
+ Trace 228677
Thread 1 (Thread 0x7f411fffe9c0 (LWP 1683))
I cannot really reproduce this, but I just pushed a couple of fixes ([1] and [2]) to git master and gnome-3-2 that should fix the preconditions for this bug to happen. Closing as FIXED. [1] http://git.gnome.org/browse/nautilus/commit/?id=cda2c75df4b95a481e8b774081ec1240d47fa45f [2] http://git.gnome.org/browse/nautilus/commit/?id=4764a856c7a6e5a84d4067e7b105c09a93ffdbe4