places-sidebar: don't assert we have a valid selected iter

When reordering bookmarks, don't assert we have a selected iter, since
it might not always be the case.

https://bugzilla.gnome.org/show_bug.cgi?id=660876